Refactor Address and User services, update controller methods for improved readability, and rename mapping classes